err/gwss-parser.err
Listing '.'...
Listing './bin'...
Compiling './bin/gwss-parser.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gwss_parser'...
Listing './lib/python3.5/site-packages/gwss_parser/common'...
Compiling './lib/python3.5/site-packages/gwss_parser/common/logger.py'...
***   File "./lib/python3.5/site-packages/gwss_parser/common/logger.py", line 54
    os.mkdir(log_dir, 0777)
                         ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/gwss_parser/common/loggerconfig.py'...
***   File "./lib/python3.5/site-packages/gwss_parser/common/loggerconfig.py", line 296
    except StandardError, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gwss_parser/ngx_cfg_utils.py'...
***   File "./lib/python3.5/site-packages/gwss_parser/ngx_cfg_utils.py", line 89
    print 'Cannot get server ip via icanhazip.com !!!!'
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gwss_parser/ngx_log_parser.py'...
***   File "./lib/python3.5/site-packages/gwss_parser/ngx_log_parser.py", line 37
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gwss_parser/start.py'...
***   File "./lib/python3.5/site-packages/gwss_parser/start.py", line 88
    os.makedirs(output_dir, 0777);
                               ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/gwss_parser-1.6.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
